# peripheral.xarcade

./: .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  sync-addon-metadata-translations.yml
debian/: control  copyright  rules
peripheral.xarcade/: addon.xml.in
peripheral.xarcade/resources/resource.language.az_az/: strings.po
peripheral.xarcade/resources/resource.language.be_by/: strings.po
peripheral.xarcade/resources/resource.language.bg_bg/: strings.po
peripheral.xarcade/resources/resource.language.bs_ba/: strings.po
peripheral.xarcade/resources/resource.language.cy_gb/: strings.po
peripheral.xarcade/resources/resource.language.en_au/: strings.po
peripheral.xarcade/resources/resource.language.en_us/: strings.po
peripheral.xarcade/resources/resource.language.es_ar/: strings.po
peripheral.xarcade/resources/resource.language.es_mx/: strings.po
peripheral.xarcade/resources/resource.language.et_ee/: strings.po
peripheral.xarcade/resources/resource.language.fa_af/: strings.po
peripheral.xarcade/resources/resource.language.fa_ir/: strings.po
peripheral.xarcade/resources/resource.language.fi_fi/: strings.po
peripheral.xarcade/resources/resource.language.fo_fo/: strings.po
peripheral.xarcade/resources/resource.language.fr_ca/: strings.po
peripheral.xarcade/resources/resource.language.fr_fr/: strings.po
peripheral.xarcade/resources/resource.language.hr_hr/: strings.po
peripheral.xarcade/resources/resource.language.hu_hu/: strings.po
peripheral.xarcade/resources/resource.language.is_is/: strings.po
src/: addon.cpp  addon.h
src/utils/: CommonDefines.h  CommonMacros.h
src/xarcade/: XArcadeDefines.h  XArcadeDevice.cpp  XArcadeDevice.h  XArcadeScanner.cpp  XArcadeScanner.h  XArcadeTypes.h  XArcadeUtils.cpp  XArcadeUtils.h
(+99 files in other folders)
